--- a/src/Components/Products/Products.css
+++ b/src/Components/Products/Products.css
@@ -23,8 +23,12 @@ body {
   border-radius: 2rem;
   box-shadow: 0px 1rem 1.5rem rgba(0,0,0,0.5);
 }
+
+/* <img src="https://thumbs2.imgbox.com/15/0d/dxP0qBsF_t.jpg" alt="image host"/> */
+
+
 .card .banner {
-  background-image: url("https://images.unsplash.com/photo-1545703549-7bdb1d01b734?ixlib=rb-1.2.1&q=80&fm=jpg&crop=entropy&cs=tinysrgb&w=400&fit=max&ixid=eyJhcHBfaWQiOjE0NTg5fQ");
+  background-image: url("https://images.unsplash.com/photo-1499951360447-b19be8fe80f5?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=870&q=80");
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
@@ -34,16 +38,16 @@ body {
   justify-content: center;
   box-sizing: border-box;
 }
-.card .banner svg {
+.card .banner img {
   background-color: #fff;
-  width: 6rem;
-  height: 6rem;
+  width: 100px;
+  height: 100px;
   box-shadow: 0 0.5rem 1rem rgba(0,0,0,0.3);
   border-radius: 50%;
   transform: translateY(50%);
   transition: transform 200ms cubic-bezier(0.18, 0.89, 0.32, 1.28);
 }
-.card .banner svg:hover {
+.card .banner img:hover {
   transform: translateY(50%) scale(1.3);
 }
 .card .menu {
@@ -95,7 +99,7 @@ body {
   color: #a0a0a0;
   font-size: 0.85rem;
   text-align: center;
-  padding: 0 2rem 1.2rem;
+  padding: 0 2rem 0.2rem;
 }
 .card .actions {
   padding: 0 2rem 1.2rem;
@@ -104,7 +108,7 @@ body {
   order: 99;
 }
 .card .actions .follow-info {
-  padding: 0 0 1rem;
+  padding: 0 0 0.2rem;
   display: flex;
 }
 .card .actions .follow-info h2 {
@@ -112,6 +116,7 @@ body {
   width: 50%;
   margin: 0;
   box-sizing: border-box;
+  font-size: 1.2rem;
 }
 .card .actions .follow-info h2 a {
   text-decoration: none;
@@ -139,29 +144,68 @@ body {
 .card .actions .follow-info h2 a:hover span {
   color: #007ad6;
 }
-.card .actions .follow-btn button {
+/* follow btn style  */
+.card .actions .follow-btn{
   color: inherit;
   font: inherit;
   font-weight: bold;
   background-color: #ffd01a;
-  width: 100%;
+  width: 45%;
   border: none;
-  padding: 1rem;
+  padding: 0.8rem;
   outline: none;
   box-sizing: border-box;
   border-radius: 1.5rem/50%;
   transition: background-color 100ms ease-in-out, transform 200ms cubic-bezier(0.18, 0.89, 0.32, 1.28);
 }
-.card .actions .follow-btn button:hover {
+.card .actions .follow-btn:hover {
   background-color: #efb10a;
   transform: scale(1.1);
 }
-.card .actions .follow-btn button:active {
+.card .actions .follow-btn:active {
   background-color: #e8a200;
   transform: scale(1);
 }
+
+/* contact btn style  */
+.card .actions .contact-btn{
+  color: inherit;
+  font: inherit;
+  font-weight: bold;
+  background-color: #e6e6e6;
+  width: 45%;
+  border: none;
+  padding: 0.8rem;
+  outline: none;
+  box-sizing: border-box;
+  border-radius: 1.5rem/50%;
+  transition: background-color 100ms ease-in-out, transform 200ms cubic-bezier(0.18, 0.89, 0.32, 1.28);
+}
+.card .actions .contact-btn:hover {
+  background-color: rgb(181, 181, 181);
+  transform: scale(1.1);
+}
+.card .actions .contact-btn:active {
+  transform: scale(1);
+}
+
 .card .desc {
   text-align: justify;
   padding: 0 2rem 2.5rem;
   order: 100;
+}
+.closeBtn{
+  width: 1.3rem;
+}
+.profiles{
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  gap: 2rem;
+}
+
+@media screen and (max-width: 600px) {
+  .profiles{
+    display: grid;
+    grid-template-columns: repeat(1, 1fr);
+  }
 }
