--- a/src/Components/Header/Header.css
+++ b/src/Components/Header/Header.css
@@ -1,15 +1,23 @@
-ul{
+ul {
     text-align: center;
     margin: 2rem;
 }
-.navItem{
+
+.navItem {
     display: inline;
     text-decoration: none;
-    padding: 1rem;
+    /* padding: 1rem; */
+    background-color: transparent;
+    color: white;
+    padding: 10px;
+    border-radius: 5px;
+    transition: background-color 0.3s ease;
+    box-shadow: inset 0 0 0 0px white;
 }
-.navItem:hover{
-    background-color: rgb(201, 213, 254);
-    border-radius: 10px;
+
+.navItem:hover {
+    background-color: rgba(255, 105, 180, 0.3);
+    box-shadow: inset 0 0 0 0px rgba(255, 105, 180, 0.6);
 }
 
 /* @media screen, (width: ) {
